--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@ body {
 }
 
 /* line 23, ../sass/styles.scss */
-h1.intro {
-  font-weight: 300;
+h3 {
+  font-size: 1.5rem;
 }
 
 /* line 27, ../sass/styles.scss */
@@ -40,172 +40,364 @@ a:hover, a:focus {
 /* line 41, ../sass/styles.scss */
 ul {
   list-style-type: none;
+  margin-bottom: 0;
+}
+/* line 44, ../sass/styles.scss */
+ul li {
+  height: 100%;
+}
+/* line 46, ../sass/styles.scss */
+ul li a {
+  height: 100%;
+  vertical-align: middle;
 }
 
-/* line 45, ../sass/styles.scss */
+/* line 53, ../sass/styles.scss */
 .inline-list li,
 .inline-item {
   display: inline-block;
 }
 
-/* line 50, ../sass/styles.scss */
+/* line 58, ../sass/styles.scss */
 .medium-brown {
   background: #dad2bc;
 }
 
-/* line 54, ../sass/styles.scss */
+/* line 62, ../sass/styles.scss */
 .dark-brown {
   background: #a99985;
 }
 
-/* line 58, ../sass/styles.scss */
+/* line 66, ../sass/styles.scss */
 .green {
   background: #819ca0;
 }
 
-/* line 62, ../sass/styles.scss */
+/* line 70, ../sass/styles.scss */
 .text-light-brown {
   color: #f5f1ed;
 }
 
-/* line 66, ../sass/styles.scss */
+/* line 74, ../sass/styles.scss */
 .text-medium-brown {
   color: #dad2bc;
 }
 
-/* line 70, ../sass/styles.scss */
+/* line 78, ../sass/styles.scss */
 .text-dark-brown {
   color: #a99985;
 }
 
-/* line 74, ../sass/styles.scss */
+/* line 82, ../sass/styles.scss */
 .text-green {
   color: #819ca0;
+}
+
+/* line 86, ../sass/styles.scss */
+.text-grey {
+  color: #333333;
+}
+
+/* line 91, ../sass/styles.scss */
+.social-icons li {
+  margin-right: 5px;
+}
+/* line 93, ../sass/styles.scss */
+.social-icons li a {
+  display: block;
+  width: 25px;
+  height: 25px;
+  background: no-repeat center center;
+  background-size: 25px 25px;
 }
 
 /**
  * Navbar
  */
-/* line 81, ../sass/styles.scss */
-nav {
-  padding-top: 15px;
-  padding-bottom: 15px;
+/* line 106, ../sass/styles.scss */
+.navbar {
+  padding-top: 5px;
+  padding-bottom: 5px;
   position: fixed;
   z-index: 100;
   width: 100%;
+  min-height: 50px;
+  background: #f5f1ed;
 }
-/* line 87, ../sass/styles.scss */
-nav #mainNav {
-  float: left;
-  padding: 0;
+/* line 114, ../sass/styles.scss */
+.navbar .navbar-toggler-icon {
+  background: url("../images/menu.png") no-repeat center center;
+  background-size: 25px 25px;
 }
-/* line 92, ../sass/styles.scss */
-nav .social-icons {
-  float: right;
+/* line 117, ../sass/styles.scss */
+.navbar .navbar-toggler-icon:hover {
+  background-image: url("../images/menu-green.png");
+}
+/* line 121, ../sass/styles.scss */
+.navbar #mainNav {
+  margin-top: 45px;
+  text-align: center;
+  text-transform: uppercase;
+}
+/* line 126, ../sass/styles.scss */
+.navbar .social-icons {
+  position: absolute;
+  right: 0;
+  margin-top: 7px;
+}
+/* line 131, ../sass/styles.scss */
+.navbar .social-icons li.linkedin a {
+  background-image: url("../images/linkedin.png");
+}
+/* line 133, ../sass/styles.scss */
+.navbar .social-icons li.linkedin a:hover {
+  background-image: url("../images/linkedin-green.png");
+}
+/* line 137, ../sass/styles.scss */
+.navbar .social-icons li.github a {
+  background-image: url("../images/github.png");
+}
+/* line 139, ../sass/styles.scss */
+.navbar .social-icons li.github a:hover {
+  background-image: url("../images/github-green.png");
 }
 
 /**
  * Slides
  */
-/* line 100, ../sass/styles.scss */
+/* line 150, ../sass/styles.scss */
 .homepage-slide {
   height: 100vh;
-  background: url(http://placehold.it/1920x1080) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url("../images/tesla.jpg") no-repeat center center;
+  -webkit-background-size: fill;
+  -moz-background-size: fill;
+  -o-background-size: fill;
+  background-size: fill;
+  padding-top: 55px;
+}
+/* line 158, ../sass/styles.scss */
+.homepage-slide h1.intro {
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+/* line 161, ../sass/styles.scss */
+.homepage-slide h1.intro span {
+  font-weight: 700;
+}
+/* line 165, ../sass/styles.scss */
+.homepage-slide h2 {
+  font-weight: 300;
+  margin-top: 2rem;
 }
 
-/* line 109, ../sass/styles.scss */
+/* line 171, ../sass/styles.scss */
 .services-background {
   min-height: 3px;
 }
 
-/* line 114, ../sass/styles.scss */
+/* line 176, ../sass/styles.scss */
 .services-slide .service {
-  height: 125px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
-/* line 118, ../sass/styles.scss */
+/* line 179, ../sass/styles.scss */
 .services-slide .service .service-icon {
   display: inline-block;
-  width: 20%;
   width: 95px;
   height: 95px;
   text-align: center;
-  padding-top: 16px;
+  padding-top: 8px;
   margin: 0 auto;
   -moz-border-radius: 56px;
   -webkit-border-radius: 56px;
   border-radius: 56px;
-  background: #a99985;
+  background: #f5f1ed;
 }
-/* line 132, ../sass/styles.scss */
+/* line 190, ../sass/styles.scss */
+.services-slide .service .service-icon img {
+  width: 80px;
+  height: 80px;
+  display: block;
+}
+/* line 196, ../sass/styles.scss */
 .services-slide .service .service-body {
   display: inline-block;
   width: 70%;
   padding-left: 15px;
 }
 
-/* line 140, ../sass/styles.scss */
+/* line 204, ../sass/styles.scss */
 .projects-slide {
   border-top: 3px solid #819ca0;
   border-bottom: 3px solid #333333;
 }
-/* line 143, ../sass/styles.scss */
+/* line 207, ../sass/styles.scss */
 .projects-slide .project {
   height: 220px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
 }
-/* line 152, ../sass/styles.scss */
+/* line 212, ../sass/styles.scss */
+.projects-slide .project .project-icon {
+  text-align: center;
+  padding-top: 8px;
+}
+/* line 215, ../sass/styles.scss */
+.projects-slide .project .project-icon img {
+  width: 80px;
+  margin: 0 auto;
+}
+/* line 220, ../sass/styles.scss */
+.projects-slide .project .project-body {
+  padding-top: 10px;
+}
+/* line 222, ../sass/styles.scss */
 .projects-slide .project .project-body h4 {
   letter-spacing: 2px;
   font-size: 14px;
   line-height: 16px;
   margin-bottom: 0;
 }
-/* line 158, ../sass/styles.scss */
+/* line 228, ../sass/styles.scss */
 .projects-slide .project .project-body .tag {
   font-size: 13px;
   font-style: italic;
 }
 
-/* line 175, ../sass/styles.scss */
+/* line 238, ../sass/styles.scss */
+.about-slide .profile-image-wrapper {
+  padding-top: 20px;
+}
+/* line 240, ../sass/styles.scss */
+.about-slide .profile-image-wrapper .profile-image {
+  width: 112px;
+  height: 112px;
+  text-align: center;
+  margin: 0 auto;
+  -moz-border-radius: 56px;
+  -webkit-border-radius: 56px;
+  border-radius: 56px;
+  background: #f5f1ed;
+  overflow: hidden;
+}
+/* line 250, ../sass/styles.scss */
+.about-slide .profile-image-wrapper .profile-image img {
+  width: 112px;
+  height: 112px;
+}
+/* line 256, ../sass/styles.scss */
+.about-slide .profile {
+  padding: 25px 15px;
+}
+
+/* line 261, ../sass/styles.scss */
+.contact-slide {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+/* line 265, ../sass/styles.scss */
+.contact-slide h2 {
+  font-size: 1.5rem;
+}
+
+/* line 270, ../sass/styles.scss */
 footer {
   padding: 10px 0;
   height: 50px;
 }
-/* line 178, ../sass/styles.scss */
+/* line 273, ../sass/styles.scss */
 footer .copyright {
+  padding-top: 5px;
   font-size: 13px;
+}
+/* line 277, ../sass/styles.scss */
+footer .social-icons {
+  float: right;
+}
+/* line 280, ../sass/styles.scss */
+footer .social-icons li.linkedin a {
+  background-image: url("../images/linkedin-light.png");
+}
+/* line 282, ../sass/styles.scss */
+footer .social-icons li.linkedin a:hover {
+  background-image: url("../images/linkedin.png");
+}
+/* line 286, ../sass/styles.scss */
+footer .social-icons li.github a {
+  background-image: url("../images/github-light.png");
+}
+/* line 288, ../sass/styles.scss */
+footer .social-icons li.github a:hover {
+  background-image: url("../images/github.png");
 }
 
 /**
  * Responsive Breakpoints
  */
-/**
- * Testing classes
- */
-/* line 214, ../sass/styles.scss */
-.bg-red {
-  background: red;
-}
+@media (min-width: 768px) {
+  /* line 310, ../sass/styles.scss */
+  .navbar #mainNav {
+    margin-top: 5px;
+    text-align: left;
+  }
+  /* line 313, ../sass/styles.scss */
+  .navbar #mainNav li {
+    padding: 0 15px;
+  }
 
-/* line 218, ../sass/styles.scss */
-.bg-yellow {
-  background: yellow;
-}
+  /* line 319, ../sass/styles.scss */
+  .homepage-slide .homepage-content {
+    padding-top: 15vh;
+  }
+  /* line 321, ../sass/styles.scss */
+  .homepage-slide .homepage-content h1.intro {
+    font-size: 2rem;
+  }
 
-/* line 222, ../sass/styles.scss */
-.bg-blue {
-  background: blue;
-}
+  /* line 326, ../sass/styles.scss */
+  .services-background {
+    height: 50px;
+  }
 
-/* line 226, ../sass/styles.scss */
-.bg-green {
-  background: green;
+  /* line 331, ../sass/styles.scss */
+  .services-slide .service .service-icon {
+    display: block;
+    margin-top: -56px;
+  }
+  /* line 334, ../sass/styles.scss */
+  .services-slide .service .service-icon img {
+    display: inline-block;
+  }
+  /* line 338, ../sass/styles.scss */
+  .services-slide .service .service-body {
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  /* line 348, ../sass/styles.scss */
+  .about-slide .profile-image-wrapper {
+    padding-top: 35px;
+  }
+  /* line 350, ../sass/styles.scss */
+  .about-slide .profile-image-wrapper .profile-image {
+    width: 250px;
+    height: 250px;
+    -moz-border-radius: 125px;
+    -webkit-border-radius: 125px;
+    border-radius: 125px;
+  }
+  /* line 356, ../sass/styles.scss */
+  .about-slide .profile-image-wrapper .profile-image img {
+    width: 250px;
+    height: 250px;
+  }
+  /* line 362, ../sass/styles.scss */
+  .about-slide .profile {
+    padding: 25px 15px;
+  }
 }
