--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -20,8 +20,8 @@ body {
 	color: $grey;
 }
 
-h1.intro {
-	font-weight: 300;
+h3 {
+	font-size: 1.5rem;
 }
 
 h3, h4 {
@@ -40,6 +40,14 @@ a {
 
 ul {
 	list-style-type:none;
+	margin-bottom: 0;
+	li {
+		height: 100%;
+		a {
+			height: 100%;
+			vertical-align: middle;
+		}
+	}
 }
 
 .inline-list li,
@@ -75,22 +83,64 @@ ul {
 	color: $green;
 }
 
+.text-grey {
+	color: $grey;
+}
+
+.social-icons {
+	li {
+		margin-right: 5px;
+		a {
+			display: block;
+			width: 25px;
+			height: 25px;
+			background: no-repeat center center;
+			background-size: 25px 25px;
+		}
+	}
+}
+
 /**
  * Navbar
  */
-nav {
-	padding-top: 15px;
-	padding-bottom: 15px;
+.navbar {
+	padding-top: 5px;
+	padding-bottom: 5px;
 	position: fixed;
 	z-index: 100;
 	width: 100%;
-	#mainNav {
-		float: left;
-		padding: 0;
+	min-height: 50px;
+	background:$light-brown;
+	.navbar-toggler-icon {
+		background: url("../images/menu.png") no-repeat center center;
+		background-size: 25px 25px;
+		&:hover {
+			background-image: url("../images/menu-green.png");
+		}
 	}
-
+	#mainNav {
+		margin-top: 45px;
+		text-align: center;
+		text-transform: uppercase;
+	}
 	.social-icons {
-		float: right;
+		position: absolute;
+		right:0;
+		margin-top: 7px;
+		li {
+			&.linkedin a {
+				background-image: url("../images/linkedin.png");
+				&:hover {
+					background-image: url("../images/linkedin-green.png");
+				}
+			}
+			&.github a {
+				background-image: url("../images/github.png");
+				&:hover {
+					background-image: url("../images/github-green.png");
+				}
+			}
+		}
 	}
 }
 
@@ -99,11 +149,23 @@ nav {
  */
 .homepage-slide {
 	height: 100vh;
-	background: url(http://placehold.it/1920x1080) no-repeat center center fixed; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+	background: url('../images/tesla.jpg') no-repeat center center; 
+	-webkit-background-size: fill;
+	-moz-background-size: fill;
+	-o-background-size: fill;
+	background-size: fill;
+	padding-top: 55px;
+	h1.intro {
+		font-weight: 300;
+		font-size: 1.5rem;
+		span {
+			font-weight: 700;
+		}
+	}
+	h2 {
+		font-weight: 300;
+		margin-top: 2rem;
+	}
 }
 
 .services-background {
@@ -112,21 +174,24 @@ nav {
 
 .services-slide {
 	.service {
-		height: 125px;
 		padding-top: 10px;
 		padding-bottom: 10px;
 		.service-icon {
 			display: inline-block;
-			width: 20%;
 			width: 95px;
 			height: 95px;
 			text-align: center;
-			padding-top: 16px;
+			padding-top: 8px;
 			margin: 0 auto;
 			-moz-border-radius: 56px;
 			-webkit-border-radius: 56px;
 			border-radius: 56px;
 			background: $light-brown;
+			img {
+				width: 80px;
+				height: 80px;
+				display: block;
+			}
 		}
 		.service-body {
 			display: inline-block;
@@ -145,9 +210,15 @@ nav {
 		padding-bottom: 10px;
 		text-align: center;
 		.project-icon {
-
+			text-align: center;
+			padding-top: 8px;
+			img {
+				width: 80px;
+				margin: 0 auto;
+			}
 		}
 		.project-body {
+			padding-top: 10px;
 			h4 {
 				letter-spacing: 2px;
 				font-size: 14px;
@@ -164,18 +235,61 @@ nav {
 }
 
 .about-slide {
-	
+	.profile-image-wrapper {
+		padding-top: 20px;
+		.profile-image {
+			width: 112px;
+			height: 112px;
+			text-align: center;
+			margin: 0 auto;
+			-moz-border-radius: 56px;
+			-webkit-border-radius: 56px;
+			border-radius: 56px;
+			background: $light-brown;
+			overflow: hidden;
+			img {
+				width:112px;
+				height: 112px;
+			}
+		}
+	}
+	.profile {
+		padding: 25px 15px;
+	}
 }
 
 .contact-slide {
-
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	h2 {
+		font-size: 1.5rem;
+	}
 }
 
 footer {
 	padding: 10px 0;
 	height: 50px;
 	.copyright {
+		padding-top: 5px;
 		font-size: 13px;
+	}
+	.social-icons {
+		float: right;
+		li {
+			&.linkedin a {
+				background-image: url("../images/linkedin-light.png");
+				&:hover {
+					background-image: url("../images/linkedin.png");
+				}
+			}
+			&.github a {
+				background-image: url("../images/github-light.png");
+				&:hover {
+					background-image: url("../images/github.png");
+				}
+			}
+		}
 	}
 }
 
@@ -192,6 +306,63 @@ footer {
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
+	.navbar {
+		#mainNav {
+			margin-top: 5px;
+			text-align: left;
+			li {
+				padding: 0 15px;
+			}
+		}
+	}
+	.homepage-slide {
+		.homepage-content {
+			padding-top: 15vh;
+			h1.intro {
+				font-size: 2rem;
+			}
+		}
+	}
+	.services-background {
+		height: 50px;
+	}
+	.services-slide {
+		.service {
+			.service-icon {
+				display: block;
+				margin-top: -56px;
+				img {
+					display: inline-block;
+				}
+			}
+			.service-body {
+				width: 100%;
+				display: block;
+				text-align: center;
+				padding: 0;
+				margin: 0;
+			}
+		}
+	}
+	.about-slide {
+		.profile-image-wrapper {
+			padding-top: 35px;
+			.profile-image {
+				width: 250px;
+				height: 250px;
+				-moz-border-radius: 125px;
+				-webkit-border-radius: 125px;
+				border-radius: 125px;
+				img {
+					width:250px;
+					height: 250px;
+				}
+			}
+		}
+		.profile {
+			padding: 25px 15px;
+		}
+	}
 
 }
 
